tests/specs/test/hooks/before_after_each_error.out
Check [WILDCARD]beforeall_error.ts
running 1 test from ./beforeall_error.ts
Uncaught error from ./beforeall_error.ts FAILED
------- pre-test output -------
[
  "beforeAll 1 executed",
  "afterAll 1 executed",
  "afterAll 2 executed"
]
----- pre-test output end -----

 ERRORS 

./beforeall_error.ts (uncaught error)
error: Error: beforeAll 1 failed
  throw new Error("beforeAll 1 failed");
        ^
    at [WILDCARD]beforeall_error.ts:5:9
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

 FAILURES 

./beforeall_error.ts (uncaught error)

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
